# llm-ta-aied26

./: .gitignore  LICENSE  config.py  example.py  predict_next.ipynb  pyproject.toml  simple-code.ipynb
notebooks/: disagreement-patterns.ipynb  get_sim.ipynb  simple-code.ipynb
results/: 2026-01-21-batch_0-10_results.csv  flat_reasoning_alignment_analysis.csv
src/: MAD.py  __init__.py  base_agent.py  discussion_structures.py  model_manager.py  prompt_builder.py  validator.py
src/llm_ta_aied26/: __init__.py
utils/: __init__.py  agent.py  memory.py
